tests/script_runtime_errors/bad_fold_op/error.txt
Error: 
    1 | for event of
    2 |   case (k, v) => v
      |                  ^ Invalid fold operation /
    3 | into [] use / end